crates/rargs/tests/snapshots/test_scripts__stdout repeatable-flag.sh -d 1 -d 2 -d 3 -v -v -v.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] repeatable-flag.sh -d 1 -d 2 -d 3 -v -v -v"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Data elements:
1
2
3

Verbosity level: 3

-d 1 -d 2 -d 3 -v -v -v
